# SoccerTrack-v2

./: .gitignore  README.dataset.txt  README.md  README.roboflow.txt  data  dataset.yaml  dataset_10.yaml  dataset_100.yaml  dataset_50.yaml  detection_YOLOv8x.py  fish_eye_calibration.ipynb  pyproject.toml  requirements.txt  results_graph.py  train_yolov8_object_detection_on_custom_dataset_ipynb_のコピー.py
configs/: default_config.yaml
datasets/: dataset_10.yaml
datasets/dataset_10/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/dataset_100/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/dataset_50/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets_yaml/: dataset_10.yaml  dataset_100.yaml  dataset_50.yaml
docs/: data_processing.md  ground_truth_creation.md  index-ja.html  index.html  task-bas.html  task-gsr.html  task-mot.html
outputs/: dataset_10.json
outputs/change_trainset_size/: 2024-02-28-trainsize10-randomstate1.json  2024-02-28-trainsize10-randomstate2.json  2024-02-28-trainsize10-randomstate3.json  2024-02-28-trainsize10-randomstate4.json  (+5 more)
results_json/: det_metrics_dict_10.json
scripts/: .env  calibrate_camera.sh  calibrate_camera_from_mappings.py  convert_coordinates_to_bboxes.sh  convert_pitch_plane_to_image_plane.sh  convert_raw_to_pitch_plane.sh  create_ground_truth.sh  create_ground_truth_fixed_bboxes.sh  create_gsr.sh  generate_calibration_mappings.sh  generate_detections.sh  make_event_frequency.py  make_gt_json.py  make_json.py  plot_bboxes_on_video.sh  plot_coordinates_on_video.sh  trim_video_into_halves.sh
scripts/video_utils/: trim.py
src/: __init__.py  main.py  video_utils.py
(+273 files in other folders)
